# OS_LABS

./: .gitignore
firstLabCPP/: CMakeLists.txt  README.md
firstLabCPP/build_linux/: 1  CMakeCache.txt  Makefile  chil1  child  cmake_install.cmake  h  parent  strace_log.txt  сchil1
firstLabCPP/include/: child_process.hpp  os.h  parent_process.hpp  pipe.hpp  utils.h
firstLabCPP/report/OS_report_template_main (1)/src/: benchmark.tex  literature.tex
firstLabCPP/src/: child.cpp  child_process.cpp  os_linux.cpp  os_win.cpp  parent_process.cpp  pipe.cpp  utils.cpp
fourthLab/include/: gcf.h  square.h
fourthLab/libs/impl2/: gcf_impl2.c  square_impl2.c
fourthLab/prog2/: main.c
fourthLabС/: CMakeLists.txt
fourthLabС/libs/impl1/: gcf_impl1.c  square_impl1.c
fourthLabС/prog1/: main.c
fourthLabСPP/: CMakeLists.txt
fourthLabСPP/include/: contract.h
fourthLabСPP/libs/: libimpl1.cpp  libimpl2.cpp
fourthLabСPP/src/: program1.cpp  program2.cpp
secondLab/: CMakeLists.txt  README.md
secondLab/include/: batcher_sort.h  glob.h  mutex.h  os.h
secondLab/src/: batcher_sort.cpp  glob.cpp  main.cpp  mutex.cpp  os_linux.cpp  os_win.cpp
thirdLab/: CMakeLists.txt
thirdLab/include/: child_process.hpp  os.h  parent_process.hpp
thirdLab/report/OS_report_template_main (1)/src/: problem.tex  src.tex  titlepage.tex
thirdLab/src/: child.cpp  child_process.cpp  os_linux.cpp  os_win.cpp  parent.cpp  parent_process.cpp
